[package]
name = "csvreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
binaryfile = { git = "https://github.com/sugarflowers/binaryfile.git" }
sjis = { git = "https://github.com/sugarflowers/sjis.git" }
